Added button and functions on top of the canvas

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -35,6 +35,7 @@
 
     <body>
         <div id="gameContainer"> <!-- having a container will allow us to have a game that includes elements that are outside of the canvas -->
+            <button id ="btn" type="button" style="position: absolute; top: 80px;">Click Me!</button>
             <canvas id="gameCanvas" tabindex="1"></canvas>
 
             <!-- ***************************************************************************** -->
