First moving engine
merge

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -25,6 +25,7 @@
         <!-- Include any classes that extend from GameObject that are used in this game -->
         <script src="js/MazeCanvasGame.js" type="text/javascript"></script>
         <script src="js/StaticImage.js" type="text/javascript"></script>
+        <script src="js/EnemyCharacters.js" type="text/javascript"></script>
         <script src="js/Skeleton.js" type="text/javascript"></script>
         <script src="js/MazeSkeleton.js" type="text/javascript"></script>
         <script src="js/StaticText.js" type="text/javascript"></script>
