--- a/MazeGame.html
+++ b/MazeGame.html
@@ -23,7 +23,7 @@
         <script src="js/maze_game.js" type="text/javascript"></script>
 
         <!-- Include any classes that extend from GameObject that are used in this game -->
-        <script src="js/MazeCanvasGame.js" type="text/javascript"></script>
+        <script src="js/AvoidMenGame.js" type="text/javascript"></script>
         <script src="js/StaticImage.js" type="text/javascript"></script>
         <script src="js/EnemyCharacters.js" type="text/javascript"></script>
         <script src="js/Skeleton.js" type="text/javascript"></script>
