--- a/MazeGame.html
+++ b/MazeGame.html
@@ -24,6 +24,7 @@
 
         <!-- Include any classes that extend from GameObject that are used in this game -->
         <script src="js/AvoidMenGame.js" type="text/javascript"></script>
+        <script src="js/HiddenObjectsGame.js" type="text/javascript"></script>
         <script src="js/StaticImage.js" type="text/javascript"></script>
         <script src="js/EnemyCharacters.js" type="text/javascript"></script>
         <script src="js/Skeleton.js" type="text/javascript"></script>
@@ -36,6 +37,8 @@
 
     <body>
         <div id="gameContainer"> <!-- having a container will allow us to have a game that includes elements that are outside of the canvas -->
+          
+            <img id ="main_image" src="images/hidden_objects_main_screen_backgrounds.jpg" style="width: 500px; height: 500px; position:absolute;">Click Me!</img>
             <button id ="btn" type="button" style="position: absolute; top: 80px;">Click Me!</button>
             <canvas id="gameCanvas" tabindex="1"></canvas>
 
