--- a/MazeGame.html
+++ b/MazeGame.html
@@ -40,7 +40,7 @@
           
             <img id ="main_image" src="images/hidden_objects_main_screen_backgrounds.png" style="width: 500px; height: 500px; position:absolute;"></img>
             <img id = "btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:420px; top: 433px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
-            <img id = "guide" class = "buttonClass" src="images/guide.png" style="width: 90px; height: 100px; position:absolute; left:420px; top: 0px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
+            <div id="guide"><img class = "buttonClass" src="images/guide.png" style="width: 90px; height: 100px; position:absolute; left:420px; top: 0px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img></div>
             <img id = "btn" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn" class = "buttonClass" src="images/church.png" style="position:absolute; left:115px; top: 380px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "guide_page" src="images/guide_page.png" style="position: absolute; top: 0px; left: 510px;" ></img>
