--- a/MazeGame.html
+++ b/MazeGame.html
@@ -24,6 +24,8 @@
 
         <!-- Include any classes that extend from GameObject that are used in this game -->
         <script src="js/AvoidMenGame.js" type="text/javascript"></script>
+        <script src="js/AvoidMenGame_Man.js" type="text/javascript"></script>
+        <script src="js/AvoidMenGame_Transgender.js" type="text/javascript"></script>
         <script src="js/HiddenObjectsGame.js" type="text/javascript"></script>
         <script src="js/StaticImage.js" type="text/javascript"></script>
         <script src="js/EnemyCharacters.js" type="text/javascript"></script>
