Moving background added, boundaries added, spawing improved

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -28,6 +28,8 @@
         <script src="js/AvoidMenGame_Transgender.js" type="text/javascript"></script>
         <script src="js/HiddenObjectsGame.js" type="text/javascript"></script>
         <script src="js/StaticImage.js" type="text/javascript"></script>
+        <script src="js/BackgroundImage.js" type="text/javascript"></script>
+        <script src="js/ConfidenceMeter.js" type="text/javascript"></script>
         <script src="js/EnemyCharacters.js" type="text/javascript"></script>
         <script src="js/Skeleton.js" type="text/javascript"></script>
         <script src="js/MazeSkeleton.js" type="text/javascript"></script>
