--- a/MazeGame.html
+++ b/MazeGame.html
@@ -35,6 +35,7 @@
         <script src="js/Skeleton.js" type="text/javascript"></script>
         <script src="js/MazeSkeleton.js" type="text/javascript"></script>
         <script src="js/StaticText.js" type="text/javascript"></script>
+        <script src="js/PopUp.js" type="text/javascript"></script>
 
         <!-- ************************* END OF GAME SPECIFIC CODE ************************* -->
         <!-- ***************************************************************************** -->
