Lost point for women added

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -50,6 +50,7 @@
             <img id = "btn" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn" class = "buttonClass" src="images/church.png" style="position:absolute; left:115px; top: 380px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_angela_call" class = "buttonClass" src="images/button.png" style="position:absolute; left:20px; top: 100px; width: 50px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
+            <img id = "btn_try_again_woman" src="images/you_lost_text.png" style="position:absolute; left:150px; top: 250px; width: 200px; height: 75px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "guide_page" src="images/guide_page.png" style="position: absolute; top: 0px; left: 510px;" ></img>
             <canvas id="gameCanvas" tabindex="1"></canvas>
 
