School Game first commit

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -24,6 +24,8 @@
 
         <!-- Include any classes that extend from GameObject that are used in this game -->
         <script src="js/AvoidMenGame.js" type="text/javascript"></script>
+        <script src="js/AvoidDificultiesSchool_Man.js" type="text/javascript"></script>
+        <script src="js/AvoidDificultiesSchool_Woman.js" type="text/javascript"></script>
         <script src="js/Angela.js" type="text/javascript"></script>
         <script src="js/AvoidMenGame_Man.js" type="text/javascript"></script>
         <script src="js/AvoidMenGame_Transgender.js" type="text/javascript"></script>
@@ -47,7 +49,7 @@
             <img id ="main_image" src="images/hidden_objects_main_screen_backgrounds.png" style="width: 500px; height: 500px; position:absolute;"></img>
             <img id = "btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:420px; top: 433px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
             <div id="guide"><img class = "buttonClass" src="images/guide.png" style="width: 90px; height: 100px; position:absolute; left:420px; top: 0px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img></div>
-            <img id = "btn" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
+            <img id = "btn_school" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn" class = "buttonClass" src="images/church.png" style="position:absolute; left:115px; top: 380px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_angela_call" class = "buttonClass" src="images/button.png" style="position:absolute; left:20px; top: 100px; width: 50px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_try_again_woman" src="images/you_lost_text.png" style="position:absolute; left:150px; top: 250px; width: 200px; height: 75px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
