--- a/MazeGame.html
+++ b/MazeGame.html
@@ -31,11 +31,14 @@
         <script src="js/AvoidMenGame_Transgender.js" type="text/javascript"></script>
         <script src="js/HiddenObjectsGame.js" type="text/javascript"></script>
         <script src="js/StaticImage.js" type="text/javascript"></script>
+        <script src="js/DifficultyPopup.js" type="text/javascript"></script>
         <script src="js/BackgroundImage.js" type="text/javascript"></script>
+        <script src="js/BackgroundSchool.js" type="text/javascript"></script>
         <script src="js/ConfidenceMeter.js" type="text/javascript"></script>
         <script src="js/EnemyCharacters.js" type="text/javascript"></script>
         <script src="js/Skeleton.js" type="text/javascript"></script>
         <script src="js/MazeSkeleton.js" type="text/javascript"></script>
+        <script src="js/CharacterSchool.js" type="text/javascript"></script>
         <script src="js/StaticText.js" type="text/javascript"></script>
         <script src="js/PopUp.js" type="text/javascript"></script>
 
@@ -46,7 +49,7 @@
     <body>
         <div id="gameContainer"> <!-- having a container will allow us to have a game that includes elements that are outside of the canvas -->
           
-            <img id ="main_image" src="images/hidden_objects_main_screen_backgrounds.png" style="width: 500px; height: 500px; position:absolute;"></img>
+            <img id ="main_image" src="images/main_menu_background.png" style="width: 500px; height: 500px; position:absolute;"></img>
             <img id = "btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:420px; top: 433px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
             <div id="guide"><img class = "buttonClass" src="images/guide.png" style="width: 90px; height: 100px; position:absolute; left:420px; top: 0px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img></div>
             <img id = "btn_school" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
