--- a/MazeGame.html
+++ b/MazeGame.html
@@ -36,6 +36,7 @@
         <script src="js/MazeSkeleton.js" type="text/javascript"></script>
         <script src="js/StaticText.js" type="text/javascript"></script>
         <script src="js/PopUp.js" type="text/javascript"></script>
+        <script src="js/PopUpSimple.js" type="text/javascript"></script>
 
         <!-- ************************* END OF GAME SPECIFIC CODE ************************* -->
         <!-- ***************************************************************************** -->
@@ -51,6 +52,8 @@
             <img id = "btn" class = "buttonClass" src="images/church.png" style="position:absolute; left:115px; top: 380px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_angela_call" class = "buttonClass" src="images/button.png" style="position:absolute; left:20px; top: 100px; width: 50px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_try_again_woman" src="images/you_lost_text.png" style="position:absolute; left:150px; top: 250px; width: 200px; height: 75px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
+            <img id = "game_end" src="images/game_end_text.png" style="position:absolute; left:150px; top: 300px; width: 200px; height: 75px; "></img>
+            <div id = "game_end_con" style="position:absolute; left:235px; top: 350px; width: 200px; height: 75px; ">2137</div>
             <img id = "guide_page" src="images/guide_page.png" style="position: absolute; top: 0px; left: 510px;" ></img>
             <canvas id="gameCanvas" tabindex="1"></canvas>
 
