--- a/MazeGame.html
+++ b/MazeGame.html
@@ -55,6 +55,8 @@
             <div id="guide"><img class = "buttonClass" src="images/guide.png" style="width: 90px; height: 100px; position:absolute; left:420px; top: 0px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img></div>
             <img id = "btn_school" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn" class = "buttonClass" src="images/church.png" style="position:absolute; left:115px; top: 380px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
+            <img id = "man_character"  src="images/characters/character3.png" style="position:absolute; left:240px; top: 250px; width: 25px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
+            <img id = "woman_character"  src="images/characters/character10.png" style="position:absolute; left:240px; top: 250px; width: 25px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_angela_call" class = "buttonClass" src="images/button.png" style="position:absolute; left:20px; top: 100px; width: 50px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_try_again_woman" src="images/you_lost_text.png" style="position:absolute; left:150px; top: 250px; width: 200px; height: 75px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "game_end" src="images/game_end_text.png" style="position:absolute; left:150px; top: 300px; width: 200px; height: 75px; "></img>
