Fixed the stuff showing at wrong times

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -59,8 +59,8 @@
             <img id = "woman_character"  src="images/characters/character10.png" style="position:absolute; left:240px; top: 250px; width: 25px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_angela_call" class = "buttonClass" src="images/button.png" style="position:absolute; left:20px; top: 100px; width: 50px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn_try_again_woman" src="images/you_lost_text.png" style="position:absolute; left:150px; top: 250px; width: 200px; height: 75px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
-            <img id = "game_end" src="images/game_end_text.png" style="position:absolute; left:150px; top: 300px; width: 200px; height: 75px; "></img>
-            <div id = "game_end_con" style="position:absolute; left:235px; top: 350px; width: 200px; height: 75px; ">2137</div>
+            <img id = "game_end" src="images/game_end_text.png" style="position:absolute; left:150px; top: 300px; width: 200px; height: 75px; visibility: hidden; "></img>
+            <div id = "game_end_con" style="position:absolute; left:235px; top: 350px; width: 200px; height: 75px; visibility: hidden;">2137</div>
             <img id = "guide_page" src="images/guide_page.png" style="position: absolute; top: 0px; left: 510px;" ></img>
             <canvas id="gameCanvas" tabindex="1"></canvas>
 
