Popup work added

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -52,6 +52,8 @@
           
             <img id ="main_image" src="images/main_menu_background.png" style="width: 500px; height: 500px; position:absolute;"></img>
             <img id = "btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:420px; top: 433px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
+            <img id = "work_place_btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:30px; top: 30px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
+            <img id = "school_fact" class = "buttonClass" src="images/schoolFact.png" style="position:absolute; left:100px; top: 70px; height: 80px; width: 200px; visibility: hidden;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
             <div id="guide"><img class = "buttonClass" src="images/guide.png" style="width: 90px; height: 100px; position:absolute; left:420px; top: 0px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img></div>
             <img id = "btn_school" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn" class = "buttonClass" src="images/church.png" style="position:absolute; left:115px; top: 380px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
