--- a/MazeGame.html
+++ b/MazeGame.html
@@ -24,6 +24,8 @@
 
         <!-- Include any classes that extend from GameObject that are used in this game -->
         <script src="js/AvoidMenGame.js" type="text/javascript"></script>
+        <script src="js/MessagesFemalePlayer.js" type="text/javascript"></script>
+        <script src="js/MessagesMalePlayer.js" type="text/javascript"></script>
         <script src="js/AvoidDificultiesSchool_Man.js" type="text/javascript"></script>
         <script src="js/AvoidDificultiesSchool_Woman.js" type="text/javascript"></script>
         <script src="js/Angela.js" type="text/javascript"></script>
