Added end points for minigames and fixed lighting up

--- a/MazeGame.html
+++ b/MazeGame.html
@@ -53,11 +53,11 @@
         <div id="gameContainer"> <!-- having a container will allow us to have a game that includes elements that are outside of the canvas -->
           
             <img id ="main_image" src="images/main_menu_background.png" style="width: 500px; height: 500px; position:absolute;"></img>
-            <img id = "btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:420px; top: 433px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
+            <img id = "btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:145px; top: 111px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
             <img id = "work_place_btn" class = "buttonClass" src="images/club.png" style="position:absolute; left:30px; top: 30px;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
             <img id = "school_fact" class = "buttonClass" src="images/schoolFact.png" style="position:absolute; left:100px; top: 70px; height: 80px; width: 200px; visibility: hidden;" onmouseover=invertColors(this)  onmouseout=removeInvertColors(this)></img>
             <div id="guide"><img class = "buttonClass" src="images/guide.png" style="width: 90px; height: 100px; position:absolute; left:420px; top: 0px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img></div>
-            <img id = "btn_school" class = "buttonClass" src="images/school.png" style="position:absolute; left:330px; top: 320px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
+            <img id = "btn_school" class = "buttonClass" src="images/school.png" style="position:absolute; left:451px; top: 339px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "btn" class = "buttonClass" src="images/church.png" style="position:absolute; left:115px; top: 380px;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "man_character"  src="images/characters/character3.png" style="position:absolute; left:240px; top: 250px; width: 25px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
             <img id = "woman_character"  src="images/characters/character10.png" style="position:absolute; left:240px; top: 250px; width: 25px; height: 50px; visibility: hidden;" onmouseover=highlight(this)  onmouseout=removeHighlight(this)></img>
@@ -66,6 +66,11 @@
             <img id = "game_end" src="images/game_end_text.png" style="position:absolute; left:150px; top: 300px; width: 200px; height: 75px; visibility: hidden; "></img>
             <div id = "game_end_con" style="position:absolute; left:235px; top: 350px; width: 200px; height: 75px; visibility: hidden;">2137</div>
             <img id = "guide_page" src="images/guide_page.png" style="position: absolute; top: 0px; left: 510px;" ></img>
+            <img id = "game_end_school" src="images/game_end_text_school.png" style="position:absolute; left:150px; top: 300px; width: 200px; height: 75px; visibility: hidden; "></img>
+            <div id = "game_end_school_con" style="position:absolute; left:235px; top: 350px; width: 200px; height: 75px; visibility: hidden;">69</div>
+            <img id = "game_end_bar" src="images/game_end_text_bar.png" style="position:absolute; left:150px; top: 300px; width: 200px; height: 75px; visibility: hidden; "></img>
+            <div id = "game_end_bar_con" style="position:absolute; left:235px; top: 350px; width: 200px; height: 75px; visibility: hidden;">420</div>
+            
             <canvas id="gameCanvas" tabindex="1"></canvas>
 
             <!-- ***************************************************************************** -->
